Deployment Files/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: ngnx-pod1
  labels:
    app: ngnx-pod-lab
    type: front-end
spec:
  containers:
  - name: nginx-container
    image: nginx:latest
    ports: 
      - containerPort: 80
