Deployment Files/service-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
    type: NodePort
    ports: 
     - targetPort: 80
       port: 80
       nodePort: 30008
    selector:
        app: app-pod-lab
        type: front-end
