Deployment Files/ingress_with_dns.yaml
apiVersion: extension/v1beta1
kind: Deployment
metadata:
  name: party-clippy
spec:
  template:
    metadata:
      labels:
        app: party-clippy
    spec:
      containers:
      - name: party-clippy
        image: <Image>
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            memory: "128Mi"
            cpu: "500m"
        tty: true
        command: ("party-clippy")
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: party-clippy
spec:
  ports: 
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: party-clippy
  type: ClusterIP

---
apiVersion: extension/v1beta1
kind: Ingress
metadata:
  name: party-clippy
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: aks-helloworld.dnsname.io # dns name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: party-clippy
            port:
              number: 80
