Deployment Files/nginx-ingress.yml
# nginx definetion file
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-ingress
  template:
    metadata:
      labels:
        app: nginx-ingress
    spec:
      containers:
        - name: nginx-ingress-controller
          image: nginx:1.17.3

      args: 
        - /nginx-ingress-controller # nginx program is storead location command
        - --configmap=$ (POD_NAMESPACE)/nginx-ingress-controller
      ports: 
        - name: http 
          containerPort: 80
        - name: https
          containerPort: 443
        
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingres
spec:
  type: NodePort
  ports: 
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  selector: 
    name: nginx-ingres

---
apiVersion: extensions/v1
kind: Ingress
metadata:
  name: ingress-wear-watch
spec: 
  rules:
  - http:
      paths:
      - path: /wear
        backend:
          serviceName: wear-service
          servicePort: 80
      - path: /watch
        backend:
          serviceName: watch-service
          servicePort: 80
  

---
# Using domain
apiVersion: extensions/v1
kind: Ingress
metadata:
  name: ingress-wear-watch
spec: 
  rules:
  - host: wear.my-online-store.com
  - http:
      paths:
        backend:
          serviceName: wear-service
          servicePort: 80

  - host: watch.my-online-store.com
  - http:
      paths:
      - backend:
          serviceName: watch-service
          servicePort: 80
